--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Insert title here</title>
-</head>
-<body>
-	<h1>Start Page</h1>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:h="http://java.sun.com/jsf/html"
+	  xmlns:f="http://java.sun.com/jsf/core"
+	  xmlns:p="http://primefaces.org/ui"
+	  xmlns:ui="http://java.sun.com/jsf/facelets">
+	<ui:composition template="template.xhtml">
+		<ui:define name="header">
+			<div align="left">
+				<h:outputLabel>itCMS</h:outputLabel>
+				<h:form id="right">
+					<p:commandButton value="Sign In" action="login.xhtml?faces-redirect=true"/>
+				</h:form>
+			</div>
+		</ui:define>
+	</ui:composition>
 </html>
